--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -24,7 +24,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:text="Note" />
+        android:text="@string/question_notes" />
     <Button
         android:id="@+id/button_question_next"
         android:layout_width="@dimen/button_width"
@@ -34,5 +34,5 @@
         android:layout_alignParentRight="true"
         android:layout_toRightOf="@+id/button_question_notes"
         android:layout_toEndOf="@+id/button_question_notes"
-        android:text="Next" />
+        android:text="@string/question_next" />
 </RelativeLayout>
