--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#673AB7</color>
-    <color name="primaryDark">#512DA8</color>
-    <color name="primaryLight">#D1C4E9</color>
-    <color name="accent">#FFC107</color>
-    <color name="accentLight">#FFEB3B</color>
+    <color name="primary">#ffc107</color>
+    <color name="primaryDark">#ffa000</color>
+    <color name="primaryLight">#fff2bd</color>
+    <color name="accent">#009688</color>
+    <color name="accentLight">#B2DFDB</color>
     <color name="textPrimary">#212121</color>
     <color name="textSecondary">#757575</color>
     <color name="textLight">#FFFFFF</color>
