--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -1,46 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center_horizontal"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:gravity="center_horizontal" >
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/forms_list_description" />
+        android:layout_height="0dp"
+        android:layout_weight="0.4"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin">
 
-    <Button
-        android:id="@+id/button_form_1"
-        android:layout_width="@dimen/button_width"
-        android:layout_height="@dimen/button_height"
-        android:layout_marginTop="@dimen/spacing_vertical"
-        android:text="@string/form_1" />
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_building"/>
 
-    <Button
-        android:id="@+id/button_form_2"
-        android:layout_width="@dimen/button_width"
-        android:layout_height="@dimen/button_height"
-        android:layout_marginTop="@dimen/spacing_vertical"
-        android:text="@string/form_2" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="21sp"
+            android:textColor="@color/textPrimary"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            tools:text="GR 1123"/>
+        
+        <Button
+            android:layout_width="@dimen/button_width"
+            android:layout_height="@dimen/button_height"
+            android:text="@string/change_branch"
+            android:textSize="@dimen/button_text"
+            android:theme="@style/buttonDark"/>
 
-    <Button
-        android:id="@+id/button_form_3"
-        android:layout_width="@dimen/button_width"
-        android:layout_height="@dimen/button_height"
-        android:layout_marginTop="@dimen/spacing_vertical"
-        android:text="@string/form_3" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.5"
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        android:background="@color/backgroundDark"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin">
+
+        <Button
+            android:id="@+id/button_form_1"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/button_height_large"
+            android:text="@string/form_1"
+            android:textSize="@dimen/button_text_large"
+            android:theme="@style/buttonLight" />
+
+        <Button
+            android:id="@+id/button_form_2"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/button_height_large"
+            android:layout_marginTop="@dimen/spacing_vertical"
+            android:text="@string/form_2"
+            android:textSize="@dimen/button_text_large"
+            android:theme="@style/buttonLight" />
+
+        <Button
+            android:id="@+id/button_form_3"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/button_height_large"
+            android:layout_marginTop="@dimen/spacing_vertical"
+            android:text="@string/form_3"
+            android:textSize="@dimen/button_text_large"
+            android:theme="@style/buttonLight" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/button_form_notes"
-        android:layout_width="@dimen/button_width"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/button_height"
-        android:layout_marginTop="@dimen/spacing_vertical"
-        android:text="@string/form_notes" />
-
+        android:text="@string/form_notes"
+        android:theme="@style/buttonEmbedded"/>
 
 </LinearLayout>
