--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,8 +5,11 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="input_height">50dp</dimen>
     <dimen name="button_height">50dp</dimen>
+    <dimen name="button_height_large">70dp</dimen>
     <dimen name="button_width">200dp</dimen>
-    <dimen name="spacing_vertical">16dp</dimen>
+    <dimen name="button_text">15sp</dimen>
+    <dimen name="button_text_large">19sp</dimen>
+    <dimen name="spacing_vertical">10dp</dimen>
 
     <!-- Login -->
     <dimen name="logo_spacing">50dp</dimen>
