--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,12 @@
     <dimen name="button_text_large">19sp</dimen>
     <dimen name="spacing_vertical">10dp</dimen>
 
+    <!-- Dark container with bottom button -->
+    <dimen name="header_text">21sp</dimen>
+    <dimen name="header_margin_vertial">10dp</dimen>
+    <dimen name="icon_block_size">50dp</dimen>
+    <dimen name="dark_container_offset">22dp</dimen>
+
     <!-- Login -->
     <dimen name="logo_spacing">50dp</dimen>
     <dimen name="login_icon_size">36dp</dimen>
