--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,4 +27,8 @@
 
     <!-- Question -->
     <dimen name="question_option_text">18sp</dimen>
+    <dimen name="question_overview_title">20sp</dimen>
+    <dimen name="question_overview_title_spacing">30dp</dimen>
+    <dimen name="question_overview_item_header">16sp</dimen>
+    <dimen name="question_overview_item_text">14sp</dimen>
 </resources>
