--- a/app/src/main/res/values-v16/styles.xml
+++ b/app/src/main/res/values-v16/styles.xml
@@ -14,7 +14,7 @@
         <item name="android:textColor">@color/textPrimary</item>
     </style>
     <style name="buttonEmbedded" parent="BaseButton">
-        <item name="android:background">@color/backgroundLight</item>
-        <item name="android:textColor">@color/textPrimary</item>
+        <item name="android:background">@color/backgroundDark</item>
+        <item name="android:textColor">@color/textLight</item>
     </style>
 </resources>
