--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="textSecondary">#757575</color>
     <color name="textLight">#FFFFFF</color>
     <color name="divider">#BDBDBD</color>
+    <color name="spinnerBorder">#EFEFEF</color>
+    <color name="spinnerPlaceholder">#CCCCCC</color>
 </resources>
