--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,9 +10,13 @@
     <dimen name="button_text">15sp</dimen>
     <dimen name="button_text_large">19sp</dimen>
     <dimen name="spacing_vertical">10dp</dimen>
+    <dimen name="label_text">14sp</dimen>
+    <dimen name="label_top_spacing">16dp</dimen>
+    <dimen name="label_bottom_spacing">8dp</dimen>
 
     <!-- Dark container with bottom button -->
     <dimen name="header_text">21sp</dimen>
+    <dimen name="subheader_text">16sp</dimen>
     <dimen name="header_margin_vertial">10dp</dimen>
     <dimen name="icon_block_size">50dp</dimen>
     <dimen name="dark_container_offset">22dp</dimen>
