--- a/app/src/main/res/layout/fragment_forms_list.xml
+++ b/app/src/main/res/layout/fragment_forms_list.xml
@@ -1,97 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center_horizontal" >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
+
+    <ro.code4.votehack.widget.ChangeBranchBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.4"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin">
-
-        <ImageView
-            android:layout_width="@dimen/icon_block_size"
-            android:layout_height="@dimen/icon_block_size"
-            android:src="@drawable/ic_building"/>
-
-        <TextView
-            android:id="@+id/votingBranch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/header_text"
-            android:textColor="@color/textPrimary"
-            android:layout_marginTop="@dimen/header_margin_vertial"
-            android:layout_marginBottom="@dimen/header_margin_vertial"
-            tools:text="GR 1123"/>
-        
-        <Button
-            android:layout_width="@dimen/button_width"
-            android:layout_height="@dimen/button_height"
-            android:text="@string/change_branch"
-            android:textSize="@dimen/button_text"
-            android:theme="@style/buttonDark"/>
-
-    </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.6"
-        android:gravity="center_horizontal">
-
-        <View
+        <LinearLayout
+            android:id="@+id/form_list_first_row"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/dark_container_offset"
-            android:background="@color/backgroundDark"/>
-
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:clipToPadding="false">
+            <ro.code4.votehack.widget.FormSelectorCard
+                android:id="@+id/tile_form_1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:src="@drawable/ic_building"
+                app:text="@string/form_1"/>
+            <Space
+                android:layout_width="@dimen/activity_horizontal_margin"
+                android:layout_height="match_parent" />
+            <ro.code4.votehack.widget.FormSelectorCard
+                android:id="@+id/tile_form_2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:src="@drawable/ic_building"
+                app:text="@string/form_2"/>
+        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin">
-            <Button
-                android:id="@+id/button_form_1"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/button_height_large"
-                android:text="@string/form_1"
-                android:textSize="@dimen/button_text_large"
-                android:theme="@style/buttonLight" />
-
-            <Button
-                android:id="@+id/button_form_2"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/button_height_large"
-                android:layout_marginTop="@dimen/spacing_vertical"
-                android:text="@string/form_2"
-                android:textSize="@dimen/button_text_large"
-                android:theme="@style/buttonLight" />
-
-            <Button
-                android:id="@+id/button_form_3"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/button_height_large"
-                android:layout_marginTop="@dimen/spacing_vertical"
-                android:text="@string/form_3"
-                android:textSize="@dimen/button_text_large"
-                android:theme="@style/buttonLight" />
+            android:orientation="horizontal"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:clipToPadding="false">
+            <ro.code4.votehack.widget.FormSelectorCard
+                android:id="@+id/tile_form_3"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:src="@drawable/ic_building"
+                app:text="@string/form_3"/>
+            <Space
+                android:layout_width="@dimen/activity_horizontal_margin"
+                android:layout_height="match_parent" />
+            <ro.code4.votehack.widget.FormSelectorCard
+                android:id="@+id/tile_form_notes"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:src="@drawable/ic_building"
+                app:text="@string/form_notes"/>
         </LinearLayout>
-
-        <Button
-            android:id="@+id/button_form_notes"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/button_height"
-            android:layout_alignParentBottom="true"
-            android:text="@string/form_notes"
-            android:theme="@style/buttonEmbedded"
-            android:background="@color/backgroundLight"/>
-    </RelativeLayout>
-
-</LinearLayout>
+    </LinearLayout>
+</RelativeLayout>
