--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -3,4 +3,8 @@
     <declare-styleable name="LogoText">
         <attr name="textSize" format="reference|dimension" />
     </declare-styleable>
+    <declare-styleable name="FormSelectorCard">
+        <attr name="src" format="reference" />
+        <attr name="text" format="reference" />
+    </declare-styleable>
 </resources>
