--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -22,24 +22,28 @@
         <item name="android:colorButtonNormal">@color/accent</item>
         <item name="android:colorAccent">@color/accentLight</item>
         <item name="android:textColor">@color/textLight</item>
+        <item name="android:textSize">@dimen/button_text</item>
     </style>
 
     <style name="buttonDark" parent="BaseButton">
         <item name="android:colorButtonNormal">@color/backgroundDark</item>
         <item name="android:colorAccent">@color/backgroundAccent</item>
         <item name="android:textColor">@color/textLight</item>
+        <item name="android:textSize">@dimen/button_text</item>
     </style>
 
     <style name="buttonLight" parent="BaseButton">
         <item name="android:colorButtonNormal">@color/backgroundLight</item>
         <item name="android:colorAccent">@color/backgroundAccent</item>
         <item name="android:textColor">@color/textPrimary</item>
+        <item name="android:textSize">@dimen/button_text</item>
     </style>
 
     <style name="buttonEmbedded" parent="BaseButton">
         <item name="android:colorButtonNormal">@color/backgroundDark</item>
         <item name="android:colorAccent">@color/backgroundDark</item>
         <item name="android:textColor">@color/textLight</item>
+        <item name="android:textSize">@dimen/button_text_embedded</item>
     </style>
 
     <style name="SharedElementLoginBackground">
