--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,10 +5,9 @@
     <dimen name="activity_vertical_margin">10dp</dimen>
     <dimen name="input_height">50dp</dimen>
     <dimen name="button_height">50dp</dimen>
-    <dimen name="button_height_large">70dp</dimen>
     <dimen name="button_width">200dp</dimen>
-    <dimen name="button_text">15sp</dimen>
-    <dimen name="button_text_large">19sp</dimen>
+    <dimen name="button_text">17sp</dimen>
+    <dimen name="button_text_embedded">15sp</dimen>
     <dimen name="spacing_vertical">10dp</dimen>
     <dimen name="label_text">14sp</dimen>
     <dimen name="label_top_spacing">16dp</dimen>
