--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,7 +4,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">10dp</dimen>
     <dimen name="input_height">50dp</dimen>
-    <dimen name="button_height">50dp</dimen>
+    <dimen name="button_height">60dp</dimen>
     <dimen name="button_width">200dp</dimen>
     <dimen name="button_text">17sp</dimen>
     <dimen name="button_text_embedded">15sp</dimen>
@@ -33,6 +33,9 @@
     <dimen name="logo_spacing">50dp</dimen>
     <dimen name="login_icon_size">36dp</dimen>
     <dimen name="login_row_height">70dp</dimen>
+    <dimen name="login_margin_bottom">43dp</dimen>
+    <dimen name="login_margin_input">20dp</dimen>
+    <dimen name="login_text_size">20sp</dimen>
 
     <!-- Forms -->
     <dimen name="form_description_text">18sp</dimen>
