--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,6 +8,7 @@
     <View
         android:id="@+id/purple_background"
         style="@style/SharedElementLoginBackground"
+        android:background="@drawable/ic_login_bkg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
