--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:theme="@style/AppTheme.AppBarOverlay">
 
     <FrameLayout
@@ -28,17 +29,19 @@
                     android:layout_width="32dp"
                     android:layout_height="32dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/ic_menu_white"
+                    android:src="@drawable/ic_menu"
                     android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"
                     android:background="@null" />
 
-                <ro.code4.votehack.widget.LogoText
-                    style="@style/SharedElementLogo"
+                <TextView
+                    android:id="@+id/toolbar_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    app:textSize="24sp"/>
+                    android:textColor="@color/textPrimary"
+                    android:textSize="20sp"
+                    tools:text="Title comes here" />
             </RelativeLayout>
 
         </android.support.v7.widget.Toolbar>
