--- a/app/src/main/res/layout/fragment_forms_list.xml
+++ b/app/src/main/res/layout/fragment_forms_list.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin">
+    android:orientation="vertical">
 
     <ro.code4.votehack.widget.ChangeBranchBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
         android:layout_alignParentTop="true"/>
 
     <LinearLayout
@@ -24,13 +24,15 @@
             android:orientation="horizontal"
             android:paddingTop="@dimen/activity_vertical_margin"
             android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
             android:clipToPadding="false">
             <ro.code4.votehack.widget.FormSelectorCard
                 android:id="@+id/tile_form_1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:src="@drawable/ic_building"
+                app:letter="@string/form_1_letter"
                 app:text="@string/form_1"/>
             <Space
                 android:layout_width="@dimen/activity_horizontal_margin"
@@ -40,7 +42,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:src="@drawable/ic_building"
+                app:letter="@string/form_2_letter"
                 app:text="@string/form_2"/>
         </LinearLayout>
         <LinearLayout
@@ -49,13 +51,15 @@
             android:orientation="horizontal"
             android:paddingTop="@dimen/activity_vertical_margin"
             android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
             android:clipToPadding="false">
             <ro.code4.votehack.widget.FormSelectorCard
                 android:id="@+id/tile_form_3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:src="@drawable/ic_building"
+                app:letter="@string/form_3_letter"
                 app:text="@string/form_3"/>
             <Space
                 android:layout_width="@dimen/activity_horizontal_margin"
@@ -65,7 +69,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:src="@drawable/ic_building"
+                app:src="@drawable/ic_notes"
                 app:text="@string/form_notes"/>
         </LinearLayout>
     </LinearLayout>
