--- a/app/src/main/res/layout/widget_form_selector_card.xml
+++ b/app/src/main/res/layout/widget_form_selector_card.xml
@@ -9,16 +9,29 @@
     android:paddingEnd="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin">
+    <TextView
+        android:id="@+id/form_card_letter"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:textSize="60dp"
+        android:textColor="@color/primary"
+        android:gravity="top"
+        android:includeFontPadding="false"
+        tools:text="A"
+        tools:ignore="SpUsage" />
+
     <ImageView
         android:id="@+id/form_card_image"
-        android:layout_height="70dp"
-        android:layout_width="70dp"
-        tools:src="@drawable/ic_building"/>
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        tools:src="@drawable/ic_notes"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/form_card_text"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
         android:textColor="@color/textPrimary"
         android:textSize="13sp"
         tools:text="Formular exemplu"/>
