--- a/app/src/main/res/layout/widget_form_selector_card.xml
+++ b/app/src/main/res/layout/widget_form_selector_card.xml
@@ -13,7 +13,7 @@
         android:id="@+id/form_card_letter"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
-        android:textSize="60dp"
+        android:textSize="55dp"
         android:textColor="@color/primary"
         android:gravity="top"
         android:includeFontPadding="false"
@@ -24,6 +24,7 @@
         android:id="@+id/form_card_image"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
+        android:padding="5dp"
         tools:src="@drawable/ic_notes"
         tools:ignore="ContentDescription" />
 
