Fix questions overview layout

--- a/app/src/main/res/layout/fragment_questions_overview.xml
+++ b/app/src/main/res/layout/fragment_questions_overview.xml
@@ -16,5 +16,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/questions_overview_recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:paddingStart="@dimen/activity_horizontal_margin"
+        android:paddingEnd="@dimen/activity_horizontal_margin"
+        android:clipToPadding="false"/>
 </LinearLayout>
