--- a/app/src/main/res/layout/view_holder_question_overview.xml
+++ b/app/src/main/res/layout/view_holder_question_overview.xml
@@ -4,7 +4,6 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:layout_margin="10dp"
     android:foreground="?android:attr/selectableItemBackground">
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,8 +15,8 @@
             android:layout_height="wrap_content"
             android:padding="@dimen/spacing_vertical"
             android:gravity="center"
-            android:background="@color/backgroundDark"
-            android:textColor="@color/textLight"
+            android:background="@color/primary"
+            android:textColor="@color/textPrimary"
             android:textSize="@dimen/question_overview_item_header"
             tools:text="B3" />
         <TextView
@@ -33,13 +32,19 @@
             android:textColor="@color/textPrimary"
             android:textSize="@dimen/question_overview_item_text"
             tools:text="What is the question text? It might be longer than this, you know"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            style="@style/horizontalSeparator" />
         <TextView
             android:id="@+id/status"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/spacing_vertical"
             android:gravity="center"
-            android:textColor="@color/textSecondary"
+            android:textColor="@color/hint"
             android:textSize="@dimen/question_overview_item_text"
             tools:text="Incomplete" />
     </LinearLayout>
