--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="textPrimary">#212121</color>
     <color name="textSecondary">#757575</color>
     <color name="textLight">#FFFFFF</color>
-    <color name="divider">#BDBDBD</color>
+    <color name="divider">#E7E7E7</color>
     <color name="inputBorder">#E7E7E7</color>
     <color name="hint">#8C8C8C</color>
 </resources>
