--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,6 @@
     <color name="textLight">#FFFFFF</color>
     <color name="divider">#E7E7E7</color>
     <color name="inputBorder">#E7E7E7</color>
+    <color name="inputBorderSelected">#757575</color>
     <color name="hint">#8C8C8C</color>
 </resources>
