--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,6 +36,7 @@
 
     <style name="label">
         <item name="android:textSize">@dimen/label_text</item>
+        <item name="android:textColor">@color/textPrimary</item>
         <item name="android:paddingTop">@dimen/label_top_spacing</item>
         <item name="android:paddingBottom">@dimen/label_bottom_spacing</item>
     </style>
@@ -56,5 +57,12 @@
         <item name="android:textSize">17sp</item>
         <item name="android:textColor">@color/textPrimary</item>
         <item name="android:textColorHint">@color/hint</item>
+    </style>
+
+    <style name="radioButton" parent="@android:style/Widget.CompoundButton.RadioButton">
+        <item name="android:background">@drawable/radio_button</item>
+        <item name="android:button">@null</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/textPrimary</item>
     </style>
 </resources>
