--- a/app/src/main/res/layout/fragment_forms_list.xml
+++ b/app/src/main/res/layout/fragment_forms_list.xml
@@ -30,7 +30,7 @@
             <ro.code4.votehack.widget.FormSelectorCard
                 android:id="@+id/tile_form_1"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/form_card_height"
                 android:layout_weight="1"
                 app:letter="@string/form_1_letter"
                 app:text="@string/form_1"/>
@@ -40,7 +40,7 @@
             <ro.code4.votehack.widget.FormSelectorCard
                 android:id="@+id/tile_form_2"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/form_card_height"
                 android:layout_weight="1"
                 app:letter="@string/form_2_letter"
                 app:text="@string/form_2"/>
@@ -57,7 +57,7 @@
             <ro.code4.votehack.widget.FormSelectorCard
                 android:id="@+id/tile_form_3"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/form_card_height"
                 android:layout_weight="1"
                 app:letter="@string/form_3_letter"
                 app:text="@string/form_3"/>
@@ -67,7 +67,7 @@
             <ro.code4.votehack.widget.FormSelectorCard
                 android:id="@+id/tile_form_notes"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/form_card_height"
                 android:layout_weight="1"
                 app:src="@drawable/ic_notes"
                 app:text="@string/form_notes"/>
